# home_work_27

./: db.sqlite3  pyproject.toml  pytest.ini
ads/: models.py  permissions.py  serializers.py  validators.py  views.py
ads/fixtures/: ads.json
ads/migrations/: 0001_initial.py  0002_alter_ads_is_published_alter_ads_price_and_more.py  0002_rename_images_ad_image.py  0003_category_slug.py  0003_rename_ads_ad_rename_categories_category.py  0004_alter_ad_is_published_alter_ad_name.py  0005_alter_ad_name_alter_category_slug.py  0006_alter_ad_description.py  0007_alter_ad_is_published.py  0008_alter_ad_is_published.py  0009_alter_ad_is_published.py  0010_alter_ad_is_published.py  0011_alter_ad_is_published.py
ads/urls/: ad_urls.py  cat_urls.py
ads/views/: ad_views.py  cat_views.py
data/: csv_to_json.py
home_work_27/: settings.py  urls.py
selection/: models.py  permissions.py  serializers.py  views.py
selection/migrations/: 0001_initial.py  0002_selection_author.py
selection/urls/: urls.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_detail_test.py  ad_list_test.py
tests/selection/: selection_create_test.py
users/: models.py  serializers.py  validators.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng.py  0003_alter_user_managers_user_date_joined_user_email_and_more.py  0004_remove_user_age_user_birth_date.py  0005_alter_user_birth_date.py  0006_alter_user_email.py  0007_alter_user_email.py
users/urls/: user_urls.py
users/views/: user_views.py
